# NewTab

./: Cargo.toml  README.md  index.html  index.scss  media-queries.scss  package-lock.json  package.json  tsconfig.json  webpack.config.js
modules/: uglifycss.js
public/: bundle.js  index.html  styles.css
scripts/: build.js  build.py
src/: app.rs  app.ts  components.rs  defineCustomElements.ts  index.ts  main.rs
src/components/: add_link_btn.rs  add_link_modal.rs  link_btn.rs
src/controllers/: addPage.ts  createPagesDB.ts  getPages.ts
src/customElements/: colorPicker.ts  pageCreator.ts  pageCreatorModal.ts  pageLink.ts  pageLinkContextMenu.ts  pageList.ts  pageModifierModal.ts
src/models/: Page.ts  link.rs
