[package]
name = "new-tab"
version = "0.1.0"
edition = "2021"
description = "A WASM new tab project"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "new-tab"]
categories = ["gui", "wasm", "web-programming", "new-tab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
gloo-storage = "0.2.0"
wasm-logger = "0.2.0"
log = "0.4.14"
bincode = "1.3.3"
serde = "1.0.136"
yew-stdweb = "0.18.0"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlInputElement',
]
